<resources>
    <string name="app_name">Servy</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up"><u>New here? Sign up</u></string>
    <string name="email_hint">Email...</string>
    <string name="password_hint">Password...</string>
    <string name="next">Next</string>
    <string name="review">Review</string>
    <string name="place_order">Place an Order</string>
    <string name="new_order">New Order</string>
    <string name="order_details">Order Details</string>
    <string name="deliver_orders">Deliver Orders</string>
    <string name="my_order">My Orders</string>
    <string name="my_deliver">My Delivers</string>
    <string name="message">Message</string>
    <string name="fast_food">Fast Food</string>
    <string name="order_title">Order Title</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name...</string>
    <string name="dollar">$</string>
    <string name="estimate_total">Estimated Total </string>
    <string name="tip_amount">Tip Amount </string>
    <string name="order_total">Order Total </string>
    <string name="order_detail">Order Detail </string>
    <string name="deliver_by">Deliver By: </string>
    <string name="select_date">Select Date/Time</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="deliver_to">Deliver To:</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="item_price">Item Price</string>
    <string name="tip">Tip</string>
    <string name="earned">Earned</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="order_items">Order Items:</string>
    <string name="point">●</string>
    <string name="post_order">Post Order</string>
    <string name="deliver_order">Deliver Order</string>
    <string name="messages_order">Message Order</string>
    <string name="flag_order">Flag Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="delete_order">Delete Order</string>
    <string name="success">Success!</string>
    <string name="success_description1">Your order has entered our market place</string>
    <string name="success_description2">Someone should pick up your order soon and bring it to you by the specified date and time.</string>
    <string name="success_description3">Please allow some time for people to browse the market place for you order.  We will keep you updated on the status of your order! </string>
    <string name="got_it">Got it!</string>
    <string name="order_title_warning">Please add the order title.</string>
    <string name="order_item_warning">Please add items you want to buy.</string>
    <string name="empty_warning">Please fill all required items.</string>
    <string name="deliver_time_warning">Please set deliver time.</string>
</resources>
