<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/pic_call"
              android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/place_autocomplete_search_hint">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/success"
            android:textColor="@android:color/white"
            android:textSize="20pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/success_description1"
            android:textColor="@android:color/white"
            android:textSize="13pt"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/success_description2"
            android:textColor="@android:color/white"
            android:textSize="10pt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/success_description3"
            android:textColor="@android:color/white"
            android:textSize="10pt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/got_it"
            android:textColor="@android:color/white"
            android:layout_marginTop="40dp"
            android:textSize="8pt"
            android:background="@android:color/holo_red_light"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="backToMain"/>
        </LinearLayout>





</LinearLayout>