<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.servy.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"

        >

        <RelativeLayout
            android:id="@+id/rl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/iv_mail"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/login1"
                android:scaleType="fitCenter"
                />
            <EditText
                android:id="@+id/et_email"
                android:layout_toRightOf="@id/iv_mail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/email_hint"
                android:singleLine="true"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_below="@id/rl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/login2"
                android:scaleType="fitCenter"
                />
            <EditText
                android:id="@+id/et_password"
                android:layout_toRightOf="@id/iv_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:password="true"
                android:hint="@string/password_hint"
                android:singleLine="true"
                />
        </RelativeLayout>

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_hidden"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/rl_login"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/bt_login"
        android:layout_below="@id/tv_hidden"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark"
        android:onClick="login"
        />

    <TextView
        android:id="@+id/tv_hidden_bottom"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/darker_gray"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tv_hidden_bottom"
        android:gravity="center"/>
</RelativeLayout>
