<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:paddingBottom="10dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/pic_default"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:gravity="right"
        android:textSize="13pt"
        android:paddingRight="20dp"
        android:textColor="@android:color/holo_green_light"/>

    <TextView
        android:layout_below="@id/tv_order_status"
        android:id="@+id/tv_order_title_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What the fuck"
        android:textSize="13pt"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/tv_order_address"
        android:layout_below="@+id/tv_order_title_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What the fuck"
        android:textSize="10pt"
        android:textColor="@android:color/white"
        />
    <TextView
        android:id="@+id/tv_order_time"
        android:layout_below="@+id/tv_order_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What the fuck"
        android:textSize="10pt"
        android:textColor="@android:color/white"
        />
    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_below="@id/tv_order_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        >
        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tv_earned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/item_price"
            android:textColor="@android:color/white"
            android:textSize="8pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/tip"
            android:textColor="@android:color/white"
            android:textSize="8pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/earned"
            android:textColor="@android:color/white"
            android:textSize="8pt"/>
    </LinearLayout>

</RelativeLayout>